--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -2,12 +2,12 @@
   <!-- Sidebar -->
   <app-admin-sidebar
     [activeSection]="activeSection"
-    (sectionChange)="setActiveSection($event)"
-  ></app-admin-sidebar>
+    (sectionChange)="setActiveSection($event)">
+  </app-admin-sidebar>
 
-  <div class="flex-1 flex flex-col overflow-hidden">
+   <div class="flex-1 flex flex-col overflow-hidden">
 
-    <!-- Main Content -->
+
     <main class="flex-1 overflow-y-auto p-6">
       <ng-container *ngComponentOutlet="renderContent(); context: { $implicit: activeSection }"></ng-container>
     </main>
