feat: simplify ngComponentOutlet usage in admin dashboard

--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -9,7 +9,7 @@
 
 
     <main class="flex-1 overflow-y-auto p-6">
-      <ng-container *ngComponentOutlet="renderContent(); context: { $implicit: activeSection }"></ng-container>
+      <ng-container [ngComponentOutlet]="renderContent()"></ng-container>
     </main>
   </div>
 </div>
