--- a/src/app/pages/login/login-page.component.html
+++ b/src/app/pages/login/login-page.component.html
@@ -1,3 +1,3 @@
 <main class="min-h-screen bg-gradient-to-br from-cyan-900 to-emerald-900 flex items-center justify-center p-4">
-  <app-login />
+  <app-login></app-login >
 </main>
